--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
